fixes layout issue on profile

--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -108,6 +108,7 @@
 
 .contribution-details {
   margin: 5px 0;
+  flex: 1 0 auto;
 }
 
 .contribution-thumbnail {
